--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "dom-to-image": "^2.6.0",
+    "dom-to-pdf": "^0.1.2",
+    "file-saver": "^2.0.5",
+    "firebase": "^8.1.2",
+    "html2canvas": "^1.0.0-rc.7",
+    "html2pdf.js": "^0.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-transition-group": "^4.4.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
